--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@
  */
 
 plugins {
-    // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
+   id 'application'
 }
 
 repositories {
@@ -19,11 +18,24 @@ repositories {
 
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+    // api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    // https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-core
+	compile group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.6'
+	
+	// https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-jpeg
+	compile group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.6'
+	
+	// https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-metadata
+	compile group: 'com.twelvemonkeys.imageio', name: 'imageio-metadata', version: '3.6'    
+}
+
+application {
+	mainClass = 'main.Application'
 }
